--- a/Bert_mrc_crf命名实体识别.ipynb
+++ b/Bert_mrc_crf命名实体识别.ipynb
@@ -387,7 +387,7 @@
         "\r\n",
         "  else:\r\n",
         "    for batch in devloader:\r\n",
-        "      tokens_tensors, label_tensors, masks_tensors,token_type_ids = [t.cuda() for t in data]\r\n",
+        "      tokens_tensors, label_tensors, masks_tensors,token_type_ids = [t.cuda() for t in batch]\r\n",
         "      with torch.no_grad():\r\n",
         "        outputs = model(input_ids=tokens_tensors, attention_mask=masks_tensors,token_type_ids=token_type_ids,labels=label_tensors)\r\n",
         "      logits = outputs[1]\r\n",
@@ -433,17 +433,6 @@
         {
           "output_type": "stream",
           "text": [
-            "Validation F1-Score: 0.9459459459459458\n",
-            "Average train loss: 22.437885080065048\n",
-            "Validation F1-Score: 0.9487179487179489\n",
-            "Average train loss: 18.627866722288587\n",
-            "Validation F1-Score: 1.0\n",
-            "Average train loss: 16.889641103290376\n",
-            "Validation F1-Score: 0.9473684210526315\n",
-            "Average train loss: 13.489220482962471\n",
-            "Validation F1-Score: 1.0\n",
-            "Average train loss: 11.172262237185524\n",
-            "Validation F1-Score: 1.0\n"
           ],
           "name": "stdout"
         }
